[project]
name = "cerebras-interviewer"
version = "0.2.0"
description = "An interviewer agent using Cerebras via LiteLLM with Line SDK v0.2"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
