[project]
name = "cerebras-interviewer"
version = "0.2.0"
description = "An interviewer agent using Cerebras via LiteLLM with Line SDK v0.2"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
py-modules = ["config", "interviewer", "judges", "main", "report_logger"]
