[project]
name = "exa-web-research"
version = "0.1.0"
description = "A web research voice agent using Exa API and Cartesia Line SDK"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.1.12",
    "exa-py>=1.0.0",
    "openai>=1.70.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.12.0",
    "uvicorn==0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
