[project]
name = "exa-web-research"
version = "0.1.0"
description = "A web research voice agent using Exa API and Cartesia Line SDK"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.0.dev0",
    "exa-py>=1.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
exa-research = "main:app.run"
