[project]
name = "dexa-scan-intake"
version = "0.1.0"
description = "Customer support agent that answers questions on DEXA scan, and completes an intake form for scheduling."
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.2",
    "exa-py>=1.0.0",
    "loguru>=0.7.0",
]

[tool.setuptools]
py-modules = ["main", "tools", "intake_form", "appointment_scheduler", "history_processor"]

[tool.uv.sources]
cartesia-line = { path = "../../", editable = true }