[project]
name = "doctor-appointment-advanced-form-filling"
version = "0.1.0"
description = "Voice agent that helps patients schedule doctor appointments and complete intake forms."
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==v0.2.3alpha1",
    "loguru>=0.7.0",
]

[tool.setuptools]
py-modules = ["main", "intake_form", "appointment_scheduler"]
