[project]
name = "echo-agent"
version = "0.1.0"
description = "Simple echo voice agent that repeats user messages"
dependencies = [
    "cartesia-line==0.1.9",
    "uvicorn[standard]",
]

requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
