[project]
name = "inactivity-timeout"
version = "0.1.0"
description = "Example demonstrating inactivity timeout feature in Line SDK"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "websockets>=13.0",
]

[tool.uv.sources]
cartesia-line = { git = "https://github.com/drago-balto/line.git", rev = "a4da5ac81a7f64e4bbd5809773aa0506159f1c3a" }

[tool.setuptools]
py-modules = ["main"]
