[project]
name = "sales-development-rep"
version = "0.1.0"
description = "Fun, engaging SDR agent for Cartesia with lead capture and guardrails"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.3alpha1",
    "loguru>=0.7.0",
    "exa-py>=1.0.0",
]

[tool.setuptools]
py-modules = ["main", "prompts", "state"]

[tool.uv.sources]
cartesia-line = { path = "../../", editable = true }