[project]
name = "cartesia-line-v02"
version = "0.2.0"
description = "Line SDK v02 - Voice agent framework with LLM support"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "loguru",
    "pydantic",
    "python-dotenv",
    "phonenumbers>=9.0.22",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
