[project]
name = "basic-chat-anthropic"
version = "0.1.0"
description = "Basic chat agent using Anthropic"
dependencies = [
    "cartesia-line",
    "anthropic",
    "loguru",
    "fastapi",
    "python-dotenv",
    "uvicorn[standard]",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
