[project]
name = "browserbase-form-filler"
version = "0.1.0"
description = "Voice agent that fills web forms using Stagehand browser automation (Line SDK v02)"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.0.dev1",
    "stagehand>=3.0.0",
    "google-genai>=1.26.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
py-modules = ["main", "stagehand_form_filler"]
