[project]
name = "exa-web-research-v02"
version = "0.1.0"
description = "A web research voice agent using Exa API and Cartesia Line SDK v0.2"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line==0.2.0.dev1",
    "exa-py>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["main"]
