[project]
name = "basic-chat"
version = "0.1.0"
description = "Basic chat example using Line SDK v02"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line-v02",
    "cartesia-line",
]

[project.scripts]
basic-chat = "main:app.run"

[tool.uv.sources]
cartesia-line-v02 = { path = "../../", editable = true }
cartesia-line={ path = "../../../../", editable = true }