[project]
name = "guardrails-wrapper"
version = "0.1.0"
description = "Guardrails wrapper example - LLM agent with preprocessing/postprocessing for content filtering"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line-v02",
    "cartesia-line",
]

[project.scripts]
guardrails-wrapper = "main:app.run"

[tool.uv.sources]
cartesia-line-v02 = { path = "../../", editable = true }
cartesia-line={ path = "../../../../", editable = true }
