[project]
name = "guardrails-wrapper"
version = "0.1.0"
description = "Guardrails wrapper example - LLM agent with preprocessing/postprocessing for content filtering"
requires-python = ">=3.10"
dependencies = [
   "cartesia-line==0.2.0.dev0",
]

[project.scripts]
guardrails-wrapper = "main:app.run"

[tool.setuptools]
py-modules = ["main", "guardrails"]
